--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ node_js:
 before_script:
   - mkdir -p gnatsd
   - wget https://github.com/nats-io/gnatsd/releases/download/v0.6.0/gnatsd-v0.6.0-linux-amd64.tar.gz -qO - | tar -zxvC gnatsd/
-  - gnatsd/.gnatsd
+  - ./gnatsd/gnatsd
