--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   "main": "./index.js",
   "scripts": {
     "lint": "jshint --reporter node_modules/jshint-stylish lib/*.js test/*.js",
-    "lint:build": "jshint --reporter checkstyle lib/*.js test/*.js > reports/jshint-checkstyle.xml",
+    "lint:build": "mkdir -p reports/ && jshint --reporter checkstyle lib/*.js test/*.js > reports/jshint-checkstyle.xml",
     "depcheck": "dependency-check . lib/*",
     "depcheck:unused": "dependency-check ./package.json --unused --no-dev lib/*",
-    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- -R mocha-multi --timeout 10000 && istanbul check-coverage",
+    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- -R mocha-multi test/test-*.js --timeout 10000 && istanbul check-coverage",
     "test": "npm run depcheck && npm run depcheck:unused && npm run lint && npm run test:unit"
   },
   "engines": {
@@ -43,13 +43,13 @@
     "nats": "0.4.x"
   },
   "devDependencies": {
-    "chai": "3.2.x",
+    "chai": "3.3.x",
     "jshint": "2.8.x",
     "jshint-stylish": "2.0.x",
-    "mocha": "2.2.x",
+    "mocha": "2.3.x",
     "mocha-multi": "0.7.x",
     "dependency-check": "2.5.x",
-    "istanbul": "^0.3.17",
+    "istanbul": "0.4.x",
     "seneca": "0.6.x"
   }
 }
