--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "seneca-nats-transport",
   "version": "2.0.2",
   "description": "Seneca NATS transport",
+  "main": "index.js",
+  "scripts": {
+    "lint": "jshint --reporter node_modules/jshint-stylish *.js test/*",
+    "lint:build": "jshint --reporter checkstyle *.js test/* > reports/jshint-checkstyle.xml",
+    "depcheck": "dependency-check . *.js",
+    "depcheck:unused": "dependency-check ./package.json --unused --no-dev *.js",
+    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- -R mocha-multi && istanbul check-coverage",
+    "test:coveralls": "cat reports/coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "test": "npm run lint && npm run test:unit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/devfacet/seneca-nats-transport.git"
+  },
   "keywords": [
     "seneca",
     "nats",
@@ -12,46 +26,21 @@
     "subscribe",
     "microservices"
   ],
-  "homepage": "http://github.com/fatihcode/seneca-nats-transport",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/fatihcode/seneca-nats-transport.git"
-  },
-  "bugs": {
-    "url": "http://github.com/fatihcode/seneca-nats-transport/issues"
-  },
+  "author": "devfacet",
   "license": "MIT",
-  "private": false,
-  "author": {
-    "name": "fatih",
-    "url": "http://github.com/fatihcode"
-  },
-  "contributors": [],
-  "main": "./index.js",
-  "scripts": {
-    "lint": "jshint --reporter node_modules/jshint-stylish lib/*.js test/*.js",
-    "lint:build": "mkdir -p reports/ && jshint --reporter checkstyle lib/*.js test/*.js > reports/jshint-checkstyle.xml",
-    "depcheck": "dependency-check . lib/*",
-    "depcheck:unused": "dependency-check ./package.json --unused --no-dev lib/*",
-    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- -R mocha-multi test/test-*.js --timeout 10000 && istanbul check-coverage",
-    "test:coveralls": "cat reports/coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "test": "npm run depcheck && npm run depcheck:unused && npm run lint && npm run test:unit"
-  },
-  "engines": {
-    "node": ">=0.12"
-  },
+  "homepage": "http://github.com/devfacet/seneca-nats-transport",
   "dependencies": {
     "nats": "0.5.x"
   },
   "devDependencies": {
     "chai": "3.5.x",
     "jshint": "2.9.x",
-    "jshint-stylish": "2.1.x",
-    "mocha": "2.4.x",
-    "mocha-multi": "0.7.x",
+    "jshint-stylish": "2.2.x",
+    "mocha": "3.2.x",
+    "mocha-multi": "0.10.x",
+    "dependency-check": "2.8.x",
     "istanbul": "0.4.x",
-    "dependency-check": "2.5.x",
-    "coveralls": "2.11.x",
+    "coveralls": "^2.11.16",
     "seneca": "1.1.x"
   }
 }
