--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,13 @@ node_js:
   - "4"
   - "6"
 
+env:
+  GNATSD_VERSION=0.9.6
+
 before_script:
   - mkdir -p gnatsd
-  - wget https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-linux-amd64.zip -qO - | tar -zxv --strip-components=1 -C gnatsd/
-  - ./gnatsd/gnatsd &
+  - wget https://github.com/nats-io/gnatsd/releases/download/v${GNATSD_VERSION}/gnatsd-v${GNATSD_VERSION}-linux-amd64.zip -O gnatsd.zip; unzip gnatsd.zip
+  - gnatsd-v${GNATSD_VERSION}-linux-amd64/gnatsd &
 
 after_success:
   - npm run test:coveralls
